--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ html,body{
     margin: auto;
 }
 
+.big-card{
+    margin: 10px;
+}
 
 #main-div{
     width: 100%;
@@ -11,6 +14,7 @@ html,body{
     margin: auto;
     max-width: 800px;
     font-size: large;
+    margin-top: 2%;
 }
 
 .results-div{
